--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cached_network_image: ^3.2.1
   get: ^4.6.5
   http: ^0.13.4
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
